# gameofpig

./: CMakeLists.txt  main.cpp
resources/: icon.h
